Commit with final blog assignment

--- a/environment.yml
+++ b/environment.yml
@@ -20,6 +20,9 @@ dependencies:
   - contextily
   - folium
   - sentinelhub
+  
+  # Machine learning
+  - sktime
 
   # Jupyter Environment
   - autopep8
