--- a/notebooks/landsat_setup.ini
+++ b/notebooks/landsat_setup.ini
@@ -1,6 +1,6 @@
 [Config]
-instance_id = 51fad742-b430-4200-8dee-647bd151621d
-sh_client_id = 6b0f1254-59e8-4349-bcd3-6a56e3ea651e
+instance_id = [insert instance_id here]
+sh_client_id = [insert sh_client_id here]
 
 # Added additional % due to error on import
-sh_client_secret = spD*%%T/nPjY&/]45iXyYqEjvk_ulGn?PEHb/;};T
+sh_client_secret = [insert sh_client_secret here including an additional % if % are present in the client secret]
